Documentation edits made through Mintlify web editor

--- a/app-builder/builder/features/flashsale.mdx
+++ b/app-builder/builder/features/flashsale.mdx
@@ -13,7 +13,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -30,7 +36,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image30_6567c89508.png"
         alt="Nút thêm dữ liệu mới trong giao diện Flashsale"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu Flashsale"
       />
     </Frame>
@@ -44,7 +56,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image194_63f0013b9a.png"
         alt="Giao diện thêm dữ liệu Flashsale"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Thêm dữ liệu Flashsale"
       />
     </Frame>
@@ -65,7 +83,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image22_4538fa35d5.png"
         alt="Nút chỉnh sửa chương trình Flashsale trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa Flashsale"
       />
     </Frame>
@@ -79,7 +103,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image119_37596fa0f5.png"
         alt="Giao diện chỉnh sửa chương trình Flashsale"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Trang chỉnh sửa Flashsale"
       />
     </Frame>
@@ -100,7 +130,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image199_72108dc338.png"
         alt="Nút xóa chương trình Flashsale trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa Flashsale"
       />
     </Frame>
@@ -121,7 +157,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image291_b940e413f3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -135,7 +177,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image95_4af11967a4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -146,7 +194,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image292_9b3d97694a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -163,7 +217,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image293_2c33190cae.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -175,7 +235,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image294_a7ad2155ab.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -188,7 +254,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image295_f1f9ef9213.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -197,7 +269,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image296_8060b36901.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -206,7 +284,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image297_4c5fb2f8a1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -216,7 +300,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image298_38d81491c0.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -225,7 +315,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image299_26093b1c7c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />  
 </Frame>
@@ -234,7 +330,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image300_c7162dd9a6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -245,7 +347,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image301_d5c6ac9f93.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -256,7 +364,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image302_ad617405bc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -268,7 +382,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image303_c9cd9d16ca.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -280,7 +400,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image304_5ebc71f01d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -289,7 +415,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image305_5a87aa1f09.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -299,7 +431,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image306_4d403d53a5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>    
@@ -308,7 +446,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image307_6b9592d758.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -320,7 +464,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image308_9a4dc856ba.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -329,7 +479,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image309_2ecb89c606.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -345,7 +501,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image310_65d80f7244.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -355,7 +517,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image311_e577d11b00.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -382,7 +550,13 @@ Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image312_ddc56a614b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
-</Frame>
+</Frame>      
