--- a/app-builder/builder/features/loyalty.mdx
+++ b/app-builder/builder/features/loyalty.mdx
@@ -18,7 +18,13 @@ icon: "medal"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image507_c6aba25771.png"
         alt="Nút thêm mới hạng thành viên trong giao diện Loyalty"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm mới"
       />
     </Frame>
@@ -30,7 +36,13 @@ icon: "medal"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image508_3208ab94d0.png"
         alt="Giao diện nhập thông tin hạng thành viên mới"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Thêm dữ liệu hạng thành viên"
       />
     </Frame>
@@ -54,7 +66,13 @@ icon: "medal"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image509_135c023588.png"
         alt="Nút chỉnh sửa hạng thành viên trong giao diện Loyalty"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa"
       />
     </Frame>
@@ -66,7 +84,13 @@ icon: "medal"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image510_b99ca982dd.png"
         alt="Giao diện chỉnh sửa thông tin hạng thành viên"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Chỉnh sửa dữ liệu hạng thành viên"
       />
     </Frame>
@@ -91,7 +115,13 @@ icon: "medal"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image511_76410aa3e6.png"
         alt="Nút xóa dữ liệu hạng thành viên trong giao diện Loyalty"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa dữ liệu"
       />
     </Frame>
