--- a/app-builder/builder/features/minigame.mdx
+++ b/app-builder/builder/features/minigame.mdx
@@ -16,7 +16,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image192_09e92692a8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -29,7 +35,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image201_933df0ceda.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -42,7 +54,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image142_0976d94b23.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -53,7 +71,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image110_e312fd4909.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -66,7 +90,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image181_9e36f3ca69.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -83,7 +113,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image263_c118d867fd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -97,7 +133,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image118_452003c521.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -109,7 +151,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image264_7b15803934.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -132,7 +180,13 @@ Người dùng có thể điều chỉnh vị trí tại
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image265_7a71efdfad.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -145,7 +199,13 @@ Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông sau đó 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image266_4970e9eb94.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -161,7 +221,13 @@ Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image267_3bab5b23c8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -177,7 +243,13 @@ Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image313_a6f6b9873b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -186,4 +258,4 @@ Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
   - Xóa màu nút quay bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
   - **Liên kết banner chia sẻ game**
 
-    Người dùng nhấn tải ảnh lên hoặc chọn ảnh từ thư viện để chia sẻ game
+    Người dùng nhấn tải ảnh lên hoặc chọn ảnh từ thư viện để chia sẻ game 
