--- a/app-builder/builder/features/affiliate.mdx
+++ b/app-builder/builder/features/affiliate.mdx
@@ -16,7 +16,13 @@ icon: "handshake"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image506_89ff66f126.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -30,7 +36,13 @@ icon: "handshake"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image127_8c06100eec.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -42,7 +54,13 @@ icon: "handshake"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image505_d1403fe811.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
