Documentation edits made through Mintlify web editor

--- a/app-builder/builder/deploy-app.mdx
+++ b/app-builder/builder/deploy-app.mdx
@@ -23,7 +23,13 @@ icon: "arrow-up-from-arc"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image128_f9bd6d4e97.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -45px" 
+    }}
     title=""
   />
 </Frame>
