--- a/app-builder/builder/payment.mdx
+++ b/app-builder/builder/payment.mdx
@@ -13,7 +13,13 @@ Cách 1: Nhấn vào nút "Gói ứng dụng" phía bên trên thanh điều hư
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image227_95eab047b9.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -45px" 
+    }}
     title=""
   />
 </Frame>
@@ -24,7 +30,13 @@ Cách 1: Nhấn vào nút "Gói ứng dụng" phía bên trên thanh điều hư
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image74_081ffaaacb.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -45px" 
+    }}
     title=""
   />
 </Frame>
