--- a/app-builder/builder/support.mdx
+++ b/app-builder/builder/support.mdx
@@ -24,7 +24,13 @@ icon: "comments-question"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image3_cc41f87a2a.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
