Documentation edits made through Mintlify web editor

--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -22,8 +22,13 @@ icon: "qrcode"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image59_cd9ca57a6a.jpg"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -50px" 
+    }}
   />
 </Frame>
 
